# Senet

./: .gitignore  Cargo.toml  README.md  build.bat  build.sh  index.html  index.js  package-lock.json  package.json  style.css  vite.config.js
src/: App.css  App.jsx  database.js  lib.rs  main.jsx  main.rs  testWinConditions.js
